k8s/django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-app
  type: LoadBalancer
  ports:
    - port: 5005
      targetPort: 5005
