k8s/next-js-service.yml
apiVersion: v1
kind: Service
metadata:
  name: next-service
spec:
  selector:
    app: next-app
  type: LoadBalancer
  ports:
    - port: 9090
      targetPort: 9090
